--- a/tritas.Rmd
+++ b/tritas.Rmd
@@ -237,4 +237,4 @@ Il serait facile d'améliorer le programme en supprimmant les fonctions `EnfanGa
 
 Une amélioration possible de la fonction récursive en tail queue recursion (récursion terminale) serait envisageable, pour que celle-ci soit "transformée" en fonction itérative par le compilateur. Du point de vue code, la fonction serait plus compréhensible, et d'un point de vue exécution, plus performante (autant que si on avait codé directement une fonction itérative).
 
-Une autre possibilitée serait d'améliorer l'algorithme en lui-même, en lui évitant de trier une liste d'entiers qui l'est déjà. Cet algorithme porte le nom de "*Smoothsort*", qui possède l'avantage d'être plus efficace pour des entiers déjà triés ou presque. Il perd cependant en temps de calul par rapport au *Tri par tas* pour les entiers triés dans l'ordre décroissant, qui est plus effiace (voir partie tests).
+Une autre possibilitée serait d'améliorer l'algorithme en lui-même, en lui évitant de trier une liste d'entiers qui l'est déjà. On pourrait alors utiliser l'algorithme de "*Smoothsort*", qui possède l'avantage d'être plus efficace pour des entiers déjà triés ou presque. Il perd cependant en temps de calul par rapport au *Tri par tas* pour les entiers triés dans l'ordre décroissant, qui est plus efficace (voir partie tests).
